[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprits/Buttons/Save_button.png" type="Texture" id=1]
[ext_resource path="res://Sprits/Bg_save_score.png" type="Texture" id=2]
[ext_resource path="res://Sprits/Buttons/Save_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://Sprits/Buttons/Campo.png" type="Texture" id=4]
[ext_resource path="res://Fonts/kenyan coffee rg.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Script/Save_score.gd" type="Script" id=6]
[ext_resource path="res://Sounds/SFX/Death_sfx.mp3" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Music/8-bit-dream-land-142093.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 1
extra_spacing_space = 7
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1000, 200 )
margin_left = 20.0
margin_top = 5.0

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1000, 200 )

[node name="Save_score" type="Control"]
script = ExtResource( 6 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 512, 302 )
texture = ExtResource( 2 )

[node name="Score" type="ColorRect" parent="."]
margin_left = 369.0
margin_top = 114.0
margin_right = 676.0
margin_bottom = 180.0
color = Color( 1, 1, 1, 0 )

[node name="Text_score" type="RichTextLabel" parent="Score"]
margin_right = 280.0
margin_bottom = 63.0
custom_colors/default_color = Color( 0.976471, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Score: 00000"

[node name="Name_player" type="LineEdit" parent="."]
margin_left = 234.0
margin_top = 217.0
margin_right = 762.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Insert Your Name"
align = 1

[node name="Save_button" type="TouchScreenButton" parent="."]
position = Vector2( 416, 357 )
scale = Vector2( 2.5625, 2.5625 )
normal = ExtResource( 1 )
pressed = ExtResource( 3 )

[node name="HTTP_get" type="HTTPRequest" parent="."]

[node name="Death_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
bus = "SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
bus = "Music"

[connection signal="text_changed" from="Name_player" to="." method="_on_Name_player_text_changed"]
[connection signal="pressed" from="Save_button" to="." method="_on_Save_button_pressed"]
[connection signal="request_completed" from="HTTP_get" to="." method="_on_HTTP_get_request_completed"]
